Update footer with correct name and GitHub profile link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         
         <footer>
-            <p>Created by <a href="https://github.com/yourusername" target="_blank">Your Name</a></p>
+            <p>Created by <a href="https://github.com/geraldyao" target="_blank">Gerald Yao</a></p>
         </footer>
     </div>
     
